[package]
name = "asn"
version = "0.2.0"
edition = "2021"
description = "Newtype for Autonomous System Number (ASN)"
readme = "README-crate.md"
repository = "https://github.com/robo9k/asn-rs"
license = "MIT OR Apache-2.0"
categories = ["no-std", "no-std::no-alloc", "parser-implementations"]

[package.metadata.docs.rs]
targets = []
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[badges]
maintenance = { status = "experimental" }

[features]
default = [

]
